--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@ web/build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+### mobile
+mobile/node_modules/**/*
+mobile/.expo/*
+mobile/npm-debug.*
+mobile/*.jks
+mobile/*.p8
+mobile/*.p12
+mobile/*.key
+mobile/*.mobileprovision
+mobile/*.orig.*
+mobile/web-build/
+
+# macOS
+mobile/.DS_Store
